[tool.poetry]
name = "tira-downloader"
version = "0.1.0"
description = ""
authors = ["Anto Keinänen <anto.keinanen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
